[package]
name = "mio-serial"
version = "5.0.5"
authors = ["Zac Berkowitz <zac.berkowitz@gmail.com>"]
description = "A serial port implementation for mio"
license = "MIT"
homepage = "https://github.com/berkowski/mio-serial"
repository = "https://github.com/berkowski/mio-serial"
documentation = "http://docs.rs/mio-serial"
readme = "README.md"
keywords = ["rs232", "serial", "mio"]
categories = ["asynchronous", "hardware-support"]
edition = "2021"

[package.metadata]
msrv = "1.60.0" # Used by cargo-msrv

[features]
default = []
libudev = ["serialport/libudev"]

[dependencies]
mio = { version = "1", features = [
    "os-poll",
    "os-ext",
] }
serialport = { git = "https://github.com/iancormac84/serialport-rs.git", branch = "5.0.0-proposal-updated-to-main-and-windows-sys-but-0.52", default-features = false }

[dependencies.log]
version = "0.4"

[target.'cfg(unix)'.dependencies]
nix = "0.26"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Devices_Communication",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies.env_logger]
version = "0.10"

[[example]]
name = "read_serialport"
